--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -11,6 +11,7 @@ html {
     color: (
       primary: mat.$cyan-palette,
       tertiary: mat.$orange-palette,
+      theme-type: dark, // Enable dark mode
     ),
     typography: Roboto,
     density: 0,
@@ -18,14 +19,11 @@ html {
 }
 
 body {
-  // Default the application to a light color theme. This can be changed to
-  // `dark` to enable the dark color theme, or to `light dark` to defer to the
-  // user's system settings.
-  color-scheme: light;
+  // Enable dark color theme for the application
+  color-scheme: dark;
 
   // Set a default background, font and text colors for the application using
-  // Angular Material's system-level CSS variables. Learn more about these
-  // variables at https://material.angular.dev/guide/system-variables
+  // Angular Material's system-level CSS variables for dark mode
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
