--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,6 +6,14 @@
     </button>
     <span class="toolbar-title">{{ title }}</span>
     <span class="toolbar-spacer"></span>
+    
+    <!-- Column Selector in Toolbar -->
+    <app-column-selector 
+      [columns]="columnConfig" 
+      (columnsChange)="onColumnsChanged($event)"
+      class="toolbar-column-selector">
+    </app-column-selector>
+    
     <mat-icon>radio</mat-icon>
   </mat-toolbar>
 
@@ -16,12 +24,14 @@
                  mode="side" 
                  [opened]="sidenavOpened" 
                  class="filter-sidenav">
-      <app-filter-sidebar (filtersChanged)="onFiltersChanged($event)"></app-filter-sidebar>
+      <div class="sidebar-content">
+        <app-filter-sidebar (filtersChanged)="onFiltersChanged($event)"></app-filter-sidebar>
+      </div>
     </mat-sidenav>
 
     <!-- Main Content -->
     <mat-sidenav-content class="main-content">
-      <app-signal-table></app-signal-table>
+      <app-signal-table [columnConfig]="columnConfig"></app-signal-table>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
