--- a/src/app/app.css
+++ b/src/app/app.css
@@ -37,7 +37,7 @@
 }
 
 .filter-sidenav {
-  width: 380px;
+  width: 450px;
   background-color: var(--mat-sys-surface-container);
   border-right: 1px solid var(--mat-sys-outline-variant);
 }
@@ -46,6 +46,8 @@
   padding: 16px;
   height: 100%;
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-content {
@@ -57,13 +59,13 @@
 /* Responsive design */
 @media screen and (max-width: 1024px) {
   .filter-sidenav {
-    width: 340px;
+    width: 400px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .filter-sidenav {
-    width: 300px;
+    width: 350px;
   }
   
   .toolbar-title {
@@ -74,7 +76,7 @@
 
 @media screen and (max-width: 480px) {
   .filter-sidenav {
-    width: 280px;
+    width: 320px;
   }
   
   .toolbar-title {
