--- a/src/app/components/signal-table/signal-table.html
+++ b/src/app/components/signal-table/signal-table.html
@@ -69,7 +69,9 @@
       </ng-container>
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;" 
+               (click)="openSignalDetail(row)" 
+               class="clickable-row"></mat-row>
     </mat-table>
 
     <!-- Paginator -->
